[gd_scene load_steps=71 format=2]

[ext_resource path="res://GFX/Menu/Logo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/Selector.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Menu/lets_bg.wav" type="AudioStream" id=3]
[ext_resource path="res://GFX/Menu/Start.png" type="Texture" id=4]
[ext_resource path="res://GFX/Menu/Cursor_Blink.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Menu/select_main.wav" type="AudioStream" id=6]
[ext_resource path="res://GFX/Menu/bar.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Menu/enter_options.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Menu/fade_out.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Menu/change.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Menu/select_controls.wav" type="AudioStream" id=11]
[ext_resource path="res://GFX/Menu/toggle.png" type="Texture" id=12]
[ext_resource path="res://GFX/Menu/settings.png" type="Texture" id=13]
[ext_resource path="res://GFX/Menu/options_string.png" type="Texture" id=14]
[ext_resource path="res://icon.png" type="Texture" id=15]
[ext_resource path="res://Sounds/Main/scoreing.wav" type="AudioStream" id=16]
[ext_resource path="res://Scripts/Menu/Menu.gd" type="Script" id=17]
[ext_resource path="res://GFX/Menu/menu_bg.png" type="Texture" id=18]
[ext_resource path="res://GFX/Menu/вав.png" type="Texture" id=19]
[ext_resource path="res://GFX/Menu/options_bg.png" type="Texture" id=20]
[ext_resource path="res://GFX/Menu/credits_bg.png" type="Texture" id=21]
[ext_resource path="res://Scripts/Menu/OptionsWave.gd" type="Script" id=22]
[ext_resource path="res://GFX/Menu/scroll.png" type="Texture" id=23]
[ext_resource path="res://GFX/Menu/controls.png" type="Texture" id=24]
[ext_resource path="res://GFX/Menu/controls_keyboard.png" type="Texture" id=25]
[ext_resource path="res://Music/start.ogg" type="AudioStream" id=26]
[ext_resource path="res://Music/credits.ogg" type="AudioStream" id=27]
[ext_resource path="res://GFX/Menu/maxminmed.png" type="Texture" id=28]
[ext_resource path="res://GFX/Menu/please_restart.png" type="Texture" id=29]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 35.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 63, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 0, 36, 63, 36 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 28 )
region = Rect2( 0, 32, 82, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 28 )
region = Rect2( 0, 64, 82, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 82, 32 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 91, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 182, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 273, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 364, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 455, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 546, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 637, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 728, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 819, 0, 91, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 910, 0, 91, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 55 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 178, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 23 )
region = Rect2( 0, 32, 178, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 23 )
region = Rect2( 0, 64, 178, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 63, 36 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 12 )
region = Rect2( 0, 36, 63, 36 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="Shader" id=40]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;

void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(0.5, 0.5), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id=35]
shader = SubResource( 40 )
shader_param/circle_size = 0.623
shader_param/screen_width = 1.0
shader_param/screen_height = 1.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1440.0
script = ExtResource( 17 )
music = ExtResource( 26 )
music_credits = ExtResource( 27 )

[node name="BG" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1920.0
margin_bottom = -1440.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG4" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1440.0
margin_bottom = -960.0
texture = ExtResource( 20 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG5" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -960.0
margin_bottom = -480.0
rect_pivot_offset = Vector2( 56, 480 )
texture = ExtResource( 20 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG6" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -480.0
rect_pivot_offset = Vector2( 56, 480 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -480.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Logo"]
margin_right = 640.0
margin_bottom = 162.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Label0" type="Label" parent="."]
margin_left = 192.0
margin_top = 999.0
margin_right = 448.0
margin_bottom = 1031.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 192.0
margin_top = 1063.0
margin_right = 448.0
margin_bottom = 1095.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 192.0
margin_top = 1127.0
margin_right = 448.0
margin_bottom = 1159.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 192.0
margin_top = 1191.0
margin_right = 448.0
margin_bottom = 1223.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 192.0
margin_top = 1255.0
margin_right = 448.0
margin_bottom = 1287.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 192.0
margin_top = 1319.0
margin_right = 448.0
margin_bottom = 1351.0
text = "Text"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S_Start" type="AnimatedSprite" parent="."]
position = Vector2( 248, 358 )
frames = SubResource( 13 )
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="S_Start"]
visible = false
current = true
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 1280

[node name="Buttons" type="Control" parent="."]

[node name="Start" type="Sprite" parent="Buttons"]
position = Vector2( 320, 388 )
texture = ExtResource( 4 )

[node name="Options" type="Sprite" parent="Buttons"]
position = Vector2( 334, 704 )
texture = ExtResource( 13 )

[node name="Effects" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 483, 609 )
frames = SubResource( 16 )

[node name="Quality" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 490, 723 )
frames = SubResource( 39 )

[node name="Scaling" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 482, 760 )
frames = SubResource( 16 )

[node name="OptionsString" type="Sprite" parent="Buttons"]
position = Vector2( 79, 564 )
texture = ExtResource( 14 )
script = ExtResource( 22 )

[node name="SoundBar" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 498, 534 )
frames = SubResource( 28 )

[node name="MusicBar" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 498, 571 )
frames = SubResource( 28 )

[node name="Scroll" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 539, 646 )
frames = SubResource( 32 )

[node name="Keyboard" type="Sprite" parent="Buttons"]
position = Vector2( 72, 1032 )
texture = ExtResource( 25 )

[node name="Controls" type="Sprite" parent="Buttons"]
position = Vector2( 320, 1200 )
texture = ExtResource( 24 )

[node name="Restart" type="Sprite" parent="Buttons"]
visible = false
position = Vector2( 320, 925 )
texture = ExtResource( 29 )

[node name="VSync" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 482, 797 )
frames = SubResource( 45 )

[node name="Transition" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 35 )
position = Vector2( 0, -80 )
scale = Vector2( 6.21359, 6.21359 )
texture = ExtResource( 15 )
centered = false

[node name="select_main" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="letsgo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="enter_options" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sounds"

[node name="fadeout" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sounds"

[node name="change" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sounds"

[node name="select_controls" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sounds"

[node name="tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "Sounds"

[node name="Credits" type="Sprite" parent="."]
position = Vector2( 315.5, 1706.62 )
scale = Vector2( 19.2813, 10.4609 )
texture = ExtResource( 19 )
